--- a/StoreManager/ManageCategoryWindow.xaml
+++ b/StoreManager/ManageCategoryWindow.xaml
@@ -7,7 +7,7 @@
         <TextBox x:Name="txtCategoryID" HorizontalAlignment="Left" Margin="180,45,0,0" Width="200" VerticalAlignment="Top"/>
 
         <Label Content="Category Name" FontSize="16" HorizontalAlignment="Left" Margin="40,90,0,0" VerticalAlignment="Top"/>
-        <TextBox x:Name="txtCategoryName" HorizontalAlignment="Left" Margin="180,95,0,0" Width="200" VerticalAlignment="Top"/>
+        <TextBox x:Name="txtCategoryName" HorizontalAlignment="Left" Margin="180,95,0,0" Width="200" VerticalAlignment="Top" MaxLength="15"/>
 
         <Label Content="Description" FontSize="16" HorizontalAlignment="Left" Margin="40,140,0,0" VerticalAlignment="Top"/>
         <TextBox x:Name="txtDescription" HorizontalAlignment="Left" Margin="180,145,0,0" Width="300" Height="60" VerticalAlignment="Top" TextWrapping="Wrap" AcceptsReturn="True"/>
